[package]
name = "rengo-common"
version = "0.1.0"
authors = ["xrop <xrop@xrop.me>"]
edition = "2018"
description = "Rengo library used by `rengo-client` and `rengo-server` crates"
repository = "https://gitlab.com/xrop/rengo-common.git"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
